<resources>
    <!--Общее-->
    <string name="app_name">Кухонный помощник</string>
    <string name="version">Version 1.5</string>
    <string name="retype">"Повторите ввод"</string>
    <string name="edit">Изменить</string>
    <string name="name">Название</string>
    <string name="amount">Количество</string>
    <string name="sort">Сортировка</string>
    <string name="sortByName">Сортировка по имени</string>
    <string name="sortByDate">Сортировка по времени</string>
    <string name="sortDefault">Сортировка по умолчанию</string>
    <string name="search">Поиск</string>
    <string name="undo">Отменить</string>
    <string name="addNew">Новая запись</string>
    <string name="confirmDeletion">Подтвердите удаление</string>
    <string name="confirm">Подтвердить</string>
    <string name="increaseButton">IncreaseButton</string>
    <string name="decreaseButton">DecreaseButton</string>
    <!--Меню-->
    <string name="navigation_drawer_open">Открыть боковое меню</string>
    <string name="navigation_drawer_close">Закрыть боковое меню</string>
    <string name="recipeBook">Книга рецептов</string>
    <string name="toBuyList">Список покупок</string>
    <string name="notifications">Уведомления</string>
    <string name="additions">Дополнительно</string>
    <string name="help">Помощь</string>
    <string name="settings">Настройки</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отменить</string>
    <!--Продукты-->
    <string name="addNewProduct">Продукт</string>
    <string name="addNewHashCode">Добавить</string>
    <string name="addProduct">Добавить продукт</string>
    <string name="productsList">Продукты</string>
    <string name="categoryList">Категории</string>
    <string name="productHashCode">Штрих-код продукта</string>
    <string name="expirationDate">Годен до</string>
    <string name="unitOfMeasure">Ед.Изм.</string>
    <string name="category">Категория</string>
    <string name="deleteAllProducts">Удалить все продукты</string>
    <string name="productDeleted">Продукт удален</string>
    <string name="productAdded">Продукт добавлен</string>
    <string name="productEdited">Продукт изменен</string>
    <string name="daysLeft">Осталось дней:</string>
    <string name="expired">Срок годности истек</string>
    <string name="addedProduct">Продукт добален</string>
    <string name="editedProduct">Продукт обновлен</string>
    <string name="deleteAllProductsMessage">Вы уверены, что хотите очистить список продуктов?</string>
    <!--Рецепты-->
    <string name="addRecipe">Добавить рецепт</string>
    <string name="recipe">Рецепт</string>
    <string name="startCooking">Начать готовить</string>
    <string name="description">Описание</string>
    <string name="note">Заметка</string>
    <string name="part">Часть %d</string>
    <string name="favorite">Любимый</string>
    <string name="previousButton">previousButton</string>
    <string name="nextButton">nextButton</string>
    <string name="deleteButton">deleteButton</string>
    <string name="recipeDeleted">Рецепт удален</string>
    <string name="addedRecipe">Рецепт добален</string>
    <string name="editedRecipe">Рецепт обновлен</string>
    <string name="openRecipe">Посмотреть рецепт</string>
    <string name="deleteAllRecipeMessage">Вы уверены, что хотите очистить список рецептов?</string>
    <string name="errorDescription">"Если вы видите это сообщение, то передача рецепта между фрагментами завершилась ошибкой."</string>
    <!--Список покупок-->
    <string name="addToList">Добавить</string>
    <string name="important">Важное</string>
    <string name="amountEnable">Количество</string>
    <string name="hideCompleted">Скрыть законченные</string>
    <string name="deleteCompleted">Удалить законченные</string>
    <string name="deletedToBuy">Покупа удалена</string>
    <string name="addedToBuy">Покупка добалена</string>
    <string name="editedToBuy">Покупка обновлена</string>
    <string name="deleteAllCompletedMessage">Вы уверены, что хотите удалить все завершенные покупки?</string>
    <string name="deleteAllToBuyMessage">Вы уверены, что хотите очистить список покупок?</string>
    <!--Уведомления-->
    <string name="addNotification">Добавить уведомление</string>
    <string name="timeNotification">Время уведомления</string>
    <string name="showOnNextDay">Показать на следующий день</string>
    <string name="notificationCreated">Уведомление создано</string>
    <string name="notificationTitle">"Не забудьте купить продукты."</string>
    <string name="notificationDescription">"Настало установленое время, нажмите на уведомление, чтобы увидеть список покупок."</string>
    <string name="descriptionNotification">Получите уведомление в удобное время, чтобы не забыть о ваших покупках.</string>
    <!--Помощь-->
    <!--Настройки-->
    <string name="clearProducts">Удалить все продукты</string>
    <string name="clearToBuy">Удалить всё из списка покупок</string>
    <string name="clearRecipe">Удалить все рецепты</string>
    <string name="tableData">Данные в приложении</string>
    <!--Меры весов-->
    <string name="measure">Measure</string>
    <string name="kg">Кг</string>
    <string name="g">г</string>
    <string name="L">Л</string>
    <string name="ml">мл</string>
    <string name="stuff">шт</string>
    <string name="pack">уп</string>
</resources>