<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/productsFragment"
            android:icon="@drawable/ic_products"
            android:title="@string/productsList" />
        <item
            android:id="@+id/recipeFragment"
            android:icon="@drawable/ic_recipe_book"
            android:title="@string/recipeBook" />
        <item
            android:id="@+id/toBuyFragment"
            android:icon="@drawable/ic_to_buy_list"
            android:title="@string/toBuyList" />
    </group>
    <item android:title="@string/additions">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/settingsFragment"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/settings" />
                <item

                    android:icon="@drawable/ic_question"
                    android:title="@string/help" />
            </group>
        </menu>
    </item>
</menu>