<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/actionSearchProduct"
        android:icon="@drawable/ic_search_white"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />
    <item
        android:icon="@drawable/ic_sort_white"
        android:title="@string/sort"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/actionSortDefaultProduct"
                android:title="@string/sortDefault" />
            <item
                android:id="@+id/actionSortByNameProduct"
                android:title="@string/sortByName" />
            <item
                android:id="@+id/actionSortByDateProduct"
                android:title="@string/sortByDate" />
        </menu>
    </item>
</menu>