<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/actionSearch"
        android:icon="@drawable/ic_search_white"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView"
        />
    <item
        android:icon="@drawable/ic_sort_white"
        android:title="@string/sort"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/actionSortByDefault"
                android:title="@string/sortDefault"/>
            <item
                android:id="@+id/actionSortByName"
                android:title="@string/sortByName"/>
        </menu>
    </item>

</menu>